force-app/main/default/objects/Job_History__c/Job_History__c.object-meta.xml
<CustomObject>
    <label>Job History</label>
    <nameField>
        <label>Job History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>