force-app/main/default/objects/Job_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipName
  >Job_Histories</relationshipName>
</CustomField>