force-app/main/default/objects/Job_History__c/fields/AI_Used__c.field-meta.xml
<CustomField>
    <fullName>AI_Used__c</fullName>
    <label>AI Used</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>