force-app/main/default/objects/Job_History__c/fields/Customer_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction__c</fullName>
    <label>Customer Satisfaction</label>
    <type>Number</type>
    <precision>1</precision><scale>0</scale>
</CustomField>