force-app/main/default/objects/Job_History__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <type>Number</type>
    <precision>6</precision><scale>0</scale>
</CustomField>