force-app/main/default/objects/Job_History__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Text</type>
    <length>100</length>
</CustomField>