force-app/main/default/objects/Job_History__c/fields/Fault_Description__c.field-meta.xml
<CustomField>
    <fullName>Fault_Description__c</fullName>
    <label>Fault Description</label>
    <type>LongTextArea</type>
    <length>4096</length><visibleLines>4</visibleLines>
</CustomField>