force-app/main/default/objects/Job_History__c/fields/First_Time_Fix__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Fix__c</fullName>
    <label>First Time Fix</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>