force-app/main/default/objects/Job_History__c/fields/Parts_Used__c.field-meta.xml
<CustomField>
    <fullName>Parts_Used__c</fullName>
    <label>Parts Used</label>
    <type>LongTextArea</type>
    <length>2000</length><visibleLines>3</visibleLines>
</CustomField>