force-app/main/default/objects/Job_History__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>LongTextArea</type>
    <length>4096</length><visibleLines>4</visibleLines>
</CustomField>