force-app/main/default/objects/Job_History__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Wear and Tear</fullName></value><value><fullName>Improper Maintenance</fullName></value><value><fullName>Manufacturing Defect</fullName></value><value><fullName>Environmental</fullName></value><value><fullName>Operator Error</fullName></value><value><fullName>Unknown</fullName><default>true</default></value></valueSetDefinition></valueSet>
</CustomField>