force-app/main/default/objects/Job_History__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Technician</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo><relationshipName>Job_Histories_Completed</relationshipName>
</CustomField>