force-app/main/default/objects/Job_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Equipment_ID__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Technician__c</columns>
    <columns>Account__c</columns>
    <columns>Job_Date__c</columns>
    <columns>First_Time_Fix__c</columns>
    <columns>Duration_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Job History</label>
</ListView>